--- a/ZooManager/UI/Views/MainWindow.xaml
+++ b/ZooManager/UI/Views/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ZooManager.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Zoo Manager Professional"
+        Title="Zoo Manager"
         Width="1200" Height="750"
         MinWidth="900" MinHeight="600"
         WindowStartupLocation="CenterScreen"
@@ -31,12 +31,7 @@
                 <StackPanel Grid.Column="1"
                             Orientation="Horizontal"
                             VerticalAlignment="Center">
-                    <Ellipse Width="36" Height="36" Fill="#E8F5E9"/>
-                    <TextBlock Text="Admin"
-                               Margin="12,0,0,0"
-                               Foreground="White"
-                               FontWeight="SemiBold"/>
-                </StackPanel>
+                    </StackPanel>
             </Grid>
         </Border>
 
@@ -57,16 +52,18 @@
                                Margin="8,0,0,16"/>
 
                     <Button Content="Dashboard" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Dashboard"/>
-                    <Button Content="Animals" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Animals"/>
-                    <Button Content="Species" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Species"/>
-                    <Button Content="Enclosures" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Enclosures"/>
-                    <Button Content="Employees" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Employees"/>
+                    <Button Content="Tiere" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Animals"/>
+                    <Button Content="Tierart" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Species"/>
+                    <Button Content="Gehege" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Enclosures"/>
+                    <Button Content="Mitarbeiter" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Employees"/>
+                    <Button Content="Fütterung" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="FeedingPlan"/>
                     <Button Content="Events" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Events"/>
+                        
 
                         <Separator Margin="0,16"/>
 
-                        <Button Content="Reports" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Reports"/>
-                        <Button Content="Settings" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Settings"/>
+                        <Button Content="Statistik" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Reports"/>
+                        <Button Content="Einstellungen" Style="{StaticResource NavButton}" Click="NavButton_Click" Tag="Settings"/>
                     </StackPanel>
                 </Border>
 
