--- a/ZooManager/UI/Views/SpeciesView.xaml
+++ b/ZooManager/UI/Views/SpeciesView.xaml
@@ -53,7 +53,7 @@
                     <Label Content="Name der Tierart:"/>
                     <TextBox x:Name="NewSpeciesName" Margin="0,0,0,12" Padding="8"/>
 
-                    <Label Content="Benötigtes Klima (ANF2):"/>
+                    <Label Content="Benötigtes Klima:"/>
                     <ComboBox x:Name="NewSpeciesClimate" Margin="0,0,0,12" Padding="8">
                         <ComboBoxItem Content="Tropisch"/>
                         <ComboBoxItem Content="Trocken"/>
